--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -193,7 +193,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item \textit{82*JM} = \textit{Vita Christi por Fray Íñigo de Mendoza}, ca. 1480-1484.
 \item \textit{86*RL} = \textit{Cancionero de Ramón de Llavia}, 1488-1490?
 \item \textit{HH1} = \textit{Cancionero de Oñate-Castañeda}, s. XV.
-\item \textit{MN19} = \textit{Cancionero de Pero Guillén de Segovia}, copia del s. XVIII de un MS. del s. XV.
+\item \textit{MN19} = \textit{Cancionero de Pero Guillén de Segovia}, copia del s. XVIII de un MS. del XV.
 \item \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza}, 1483?%
 \end{itemize}
 
